[package]
name = "gst-plugin-tutorial"
version = "0.12.0-alpha.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/spiegela/gst-plugin-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
description = "GStreamer Rust Tutorial Plugin"

[dependencies]
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/sdroege/gstreamer-rs" }
byte-slice-cast = "1.0"
num-traits = "0.2"

[lib]
name = "gstrstutorial"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../version-helper" }
