[package]
name = "gst-plugin-raptorq"
version = "0.12.0-alpha.1"
authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
repository = "https://github.com/spiegela/gst-plugin-rs"
description = "GStreamer RaptorQ FEC Plugin"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs" }
gst-rtp = { package = "gstreamer-rtp", git = "https://github.com/sdroege/gstreamer-rs" }
raptorq = "1.7"

[dev-dependencies]
gst-check = { package = "gstreamer-check", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_18"] }
rand = "0.8"

[lib]
name = "gstraptorq"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-rtp-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
