[package]
name = "gst-plugin-json"
version = "0.12.0-alpha.1"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"
description = "GStreamer JSON Plugin"
repository = "https://github.com/spiegela/gst-plugin-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[dependencies.gst]
git = "https://github.com/sdroege/gstreamer-rs"
package="gstreamer"
features=["serde"]

[lib]
name = "gstjson"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[dev-dependencies.gst-check]
git = "https://github.com/sdroege/gstreamer-rs"
package="gstreamer-check"

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
