[package]
name = "gst-plugin-textwrap"
version = "0.12.0-alpha.1"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"
description = "GStreamer Text Wrap Plugin"
repository = "https://github.com/spiegela/gst-plugin-rs"

[dependencies]
textwrap = { version = "0.16", features = ["hyphenation"] }
hyphenation = "0.8"

[dependencies.gst]
git = "https://github.com/sdroege/gstreamer-rs"
package="gstreamer"

[lib]
name = "gsttextwrap"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[dev-dependencies.gst-check]
git = "https://github.com/sdroege/gstreamer-rs"
package="gstreamer-check"

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
