[package]
name = "gst-plugin-fallbackswitch"
version = "0.12.0-alpha.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jan Schmidt <jan@centricular.com>"]
repository = "https://github.com/spiegela/gst-plugin-rs"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"
description = "GStreamer Fallback Switcher and Source Plugin"

[dependencies]
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/sdroege/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs" }
gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", optional = true }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
parking_lot = "0.12"

[dev-dependencies]
gst-app = { package = "gstreamer-app", git = "https://github.com/sdroege/gstreamer-rs" }
gst-check = { package = "gstreamer-check", git = "https://github.com/sdroege/gstreamer-rs" }

[lib]
name = "gstfallbackswitch"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-fallbackswitch"
path = "examples/gtk_fallbackswitch.rs"
required-features = ["gtk", "gio", "gst-plugin-gtk4"]


[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[features]
default = ["v1_20"]
static = []
capi = []
doc = ["gst/v1_18"]
v1_20 = ["gst/v1_20"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
