[package]
name = "gst-plugin-togglerecord"
version = "0.12.0-alpha.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "MPL-2.0"
description = "GStreamer Toggle Record Plugin"
repository = "https://github.com/spiegela/gst-plugin-rs"
edition = "2021"
rust-version = "1.70"

[dependencies]
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/sdroege/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs" }
gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", optional = true }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
parking_lot = "0.12"

[dev-dependencies]
either = "1.0"
gst-check = { package = "gstreamer-check", git = "https://github.com/sdroege/gstreamer-rs" }

[lib]
name = "gsttogglerecord"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-recording"
path = "examples/gtk_recording.rs"
required-features = ["gtk", "gio", "gst-plugin-gtk4"]

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
