[package]
name = "gst-plugin-cdg"
version = "0.12.0-alpha.1"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
repository = "https://github.com/spiegela/gst-plugin-rs"
license = "MIT OR Apache-2.0"
description = "GStreamer CDG codec Plugin"
edition = "2021"
rust-version = "1.70"

[dependencies]
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://github.com/sdroege/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs" }
cdg = "0.1"
cdg_renderer = "0.7"
image = { version = "0.24", default-features = false }
muldiv = "1.0"

[dev-dependencies]
gst-app = { package = "gstreamer-app", git = "https://github.com/sdroege/gstreamer-rs" }

[lib]
name = "gstcdg"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
